<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KFC">





    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="504dp"
        android:text="@string/TotalQty"
        android:textSize="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTotalKFCQuantity"
        android:layout_width="140dp"
        android:layout_height="37dp"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="504dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="156dp"
        android:layout_height="29dp"
        android:layout_marginTop="548dp"
        android:text="@string/TotalPrice"
        android:textSize="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTotalKFCEstimatePrice"
        android:layout_width="137dp"
        android:layout_height="30dp"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="548dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPlaceOrderKFC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="292dp"
        android:layout_marginLeft="292dp"
        android:layout_marginTop="480dp"
        android:text="@string/Place_Order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnReorderKFC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="292dp"
        android:layout_marginLeft="292dp"
        android:layout_marginTop="480dp"
        android:text="@string/ReOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnConfirmOrderKFC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginLeft="264dp"
        android:layout_marginTop="552dp"
        android:text="@string/Confirm_Order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="409dp"
        android:layout_height="422dp"
        android:layout_marginTop="56dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/extracrispy"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtPriceExtraCrispy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ExtraCrispy"/>

                    <Button
                        android:id="@+id/btnIncreaseExtraCrispy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/increase"/>

                    <Button
                        android:id="@+id/btnDecreaseExtraCrispy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/decrease"/>

                    <TextView
                        android:id="@+id/txtQuantityExtraCrispy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/theoriginal"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtPriceTheOrigin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/TheOriginal"/>

                        <Button
                            android:id="@+id/btnIncreaseTheOriginal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/increase"/>

                        <Button
                            android:id="@+id/btnDecreaseTheOriginal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/decrease"/>

                        <TextView
                            android:id="@+id/txtQuantityTheOrigin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/extracrispytender"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtPriceExtraCrispyTender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ExtraCrispyTender"/>

                        <Button
                            android:id="@+id/btnIncreaseExtraCrispyTender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/increase"/>

                        <Button
                            android:id="@+id/btnDecreaseExtraCrispyTender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/decrease"/>

                        <TextView
                            android:id="@+id/txtQuantityExtraCrispyTender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/famousbowl"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtPriceFamousBowl"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/FamousBowl"/>

                            <Button
                                android:id="@+id/btnIncreaseFamousBowl"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/increase"/>

                            <Button
                                android:id="@+id/btnDecreaseFamousBowl"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/decrease"/>

                            <TextView
                                android:id="@+id/txtQuantityFamousBowl"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>